src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Under_Ship_Tolerance__c</fullName>
        <description>Change 521836 GI Service Cloud</description>
        <label>Under Ship Tolerance</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valspars_Account_Share__c</fullName>
        <inlineHelpText>Enter percent of Account business provided by Valspar.</inlineHelpText>
        <label>Valspars Account Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X11i_Customer_Id__c</fullName>
        <description>11i Customer Id from the Customer Master Header record</description>
        <label>11i Customer Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X11i_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this box is checked, this customer was synched from Oracle or Prism</description>
        <inlineHelpText>If this box is checked, this customer was synched from Oracle or Prism</inlineHelpText>
        <label>11i/Prism Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>employee_number__c</fullName>
        <label>Employee Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ALL_ACCOUNTS</fullName>
        <columns>Active__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>X11i_Customer__c</columns>
        <columns>Geo_Region__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Ship_To__c</columns>
        <columns>Previous_Fiscal_Year_Sales__c</columns>
        <columns>Previous_Fiscal_YTD_Sales__c</columns>
        <columns>Current_YTD_Sales__c</columns>
        <columns>X11i_Customer_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Accounts11i</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>Market_Segment__c</columns>
        <columns>Geo_Region__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>X11i_Customer__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X11i_Customer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>notEqual</operation>
            <value>Consumer Wattyl Trade</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>11i Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>SFDCITAdmins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts11iNARMIN</fullName>
        <columns>Business_Unit__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Active__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>Market_Segment__c</columns>
        <columns>Geo_Region__c</columns>
        <columns>Account_Type__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>X11i_Customer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Integrated_Account</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Packaging</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_COUNTRY</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>11i Accounts NARMIN</label>
        <language>en_US</language>
        <sharedTo>
            <group>SFDCITAdmins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_Synched_by_Jorve</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>Market_Segment__c</columns>
        <columns>Geo_Region__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>X11i_Customer__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>auser</value>
        </filters>
        <label>Accounts Synched by Jorge</label>
        <sharedTo>
            <group>SFDCITAdmins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AccountsbyAccountType</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>X11i_Customer__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Geo_Region__c</columns>
        <columns>Ship_To__c</columns>
        <columns>Top_Account__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>Applicator</value>
        </filters>
        <label>Accounts by Accout Type (Master)</label>
        <sharedTo>
            <role>AutoBUAdmin</role>
            <role>CoilBUAdmin</role>
            <role>ConsDBBUAdmin</role>
            <role>ConsPK_BQBUAdmin</role>
            <role>EPSBUAdmin</role>
            <role>ExecutiveManagement</role>
            <role>GIBUAdmin</role>
            <role>PackagingBUAdmin</role>
            <role>Sys_Admin</role>
            <role>WoodBUAdmin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AccountsbyCSRMst</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Ship_To__c</columns>
        <columns>Merged_ShipTos__c</columns>
        <columns>Active__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>X11i_Customer__c</columns>
        <columns>Geo_Region__c</columns>
        <columns>Top_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CSR__c</field>
            <operation>contains</operation>
            <value>Fuller</value>
        </filters>
        <label>Accounts by CSR(Master)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AccountsbyOnwerLastNm</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Ship_To__c</columns>
        <columns>Active__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>X11i_Customer__c</columns>
        <columns>Geo_Region__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Top_Account__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>startsWith</operation>
            <value>Wagner</value>
        </filters>
        <label>Accounts by Owner Last Name(Master)</label>
        <sharedTo>
            <role>AutoBUAdmin</role>
            <role>CoilBUAdmin</role>
            <role>ConsDBBUAdmin</role>
            <role>ConsPK_BQBUAdmin</role>
            <role>EPSBUAdmin</role>
            <role>ExecutiveManagement</role>
            <role>GIBUAdmin</role>
            <role>PackagingBUAdmin</role>
            <role>Sys_Admin</role>
            <role>WoodBUAdmin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Acts_GEO_REG_Mst</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Market_Segment__c</columns>
        <columns>X11i_Customer__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Top_Account__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geo_Region__c</field>
            <operation>equals</operation>
            <value>NORTH EAST</value>
        </filters>
        <label>Accounts by Geo Region (Master)</label>
        <sharedTo>
            <role>AutoBUAdmin</role>
            <role>AutomotiveExecutivesandManagers_NA</role>
            <role>GIBUAdmin</role>
            <role>WoodBUAdmin</role>
            <roleAndSubordinates>WoodExecutivesManagers_NA</roleAndSubordinates>
            <roleAndSubordinates>WoodRepsSalesTechCS_NA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Lowe_s_Pro_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Market_Segment__c</columns>
        <columns>Rating__c</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>National_Account__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Manual_Account</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Consumer Lowes</value>
        </filters>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>Pro Account</value>
        </filters>
        <label>All Lowe&apos;s Pro Accounts</label>
        <sharedTo>
            <roleAndSubordinates>Cons_Lowes_BU_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Auto_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>X11i_Customer__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Geo_Region__c</columns>
        <columns>Top_Account__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Automotive</value>
        </filters>
        <label>Automotive Accounts</label>
        <sharedTo>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Automotive_Accounts_NARMIN</fullName>
        <columns>X11i_Customer__c</columns>
        <columns>Active__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Geo_Region__c</columns>
        <columns>Top_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Consumer Wattyl Trade</value>
        </filters>
        <label>Automotive Accounts NARMIN</label>
        <sharedTo>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BQ_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Geo_Region__c</columns>
        <columns>Owner_Manager_Region__c</columns>
        <columns>Owner_Territory__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>X11i_Customer__c</columns>
        <columns>Legacy_Account_ID_Number__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Consumer B&amp;Q</value>
        </filters>
        <label>B&amp;Q Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>B_Q_Accounts_Stores_Only</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Store_Code__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Geo_Region__c</columns>
        <columns>Owner_Manager_Region__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>X11i_Customer__c</columns>
        <columns>Legacy_Account_ID_Number__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Consumer B&amp;Q</value>
        </filters>
        <filters>
            <field>Geo_Region__c</field>
            <operation>equals</operation>
            <value>1,2,3,4,5,6</value>
        </filters>
        <filters>
            <field>Owner_Manager_Region__c</field>
            <operation>equals</operation>
        </filters>
        <label>B&amp;Q Accounts - Stores Only</label>
        <language>en_US</language>
        <sharedTo>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>B_Q_Division_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>X11i_Customer__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>B&amp;Q Parent</value>
        </filters>
        <label>B &amp; Q Divisional Accounts</label>
        <sharedTo>
            <role>ConsPK_BQBUAdmin</role>
            <role>Cons_Contact_Center_BU_ADMIN_EU</role>
            <role>Cons_Contact_Center_EU</role>
            <roleAndSubordinatesInternal>Cons_B_Q_Executives_Managers_EMEAI</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>B_Q_Region_1_Stores</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>X11i_Customer__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Consumer B&amp;Q</value>
        </filters>
        <filters>
            <field>Geo_Region__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>B &amp; Q Region 1 Stores</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Cons_B_Q_Executives_Managers_EMEAI</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Integrated_Account</fullName>
        <active>true</active>
        <description>Read only to Salesforce users fed to Salesforce via web service from Oracle.</description>
        <label>Integrated Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manual_Account</fullName>
        <active>true</active>
        <description>Read Write Accounts in Salesforce that do not exist in Oracle</description>
        <label>Manual Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Name_cannot_be_Edited</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name = &quot;Integrated Account&quot;
&amp;&amp; 
NOT ( ISNEW() ) 
&amp;&amp;
ISCHANGED( Name ) 
&amp;&amp; 
$Profile.Name &lt;&gt; &quot;API USER&quot;
&amp;&amp;
$Profile.Name  &lt;&gt; &quot;Consumer Ace Sales Managers and Marketing&quot;</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The Account Name Can Only be Edited by the System Administrator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_owner_cannot_be_Edited</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name = &apos;Integrated Account&apos; 
&amp;&amp; 
NOT ( ISNEW() ) 
&amp;&amp;
ISCHANGED( OwnerId ) 
&amp;&amp; 
$Profile.Name =  &quot;Consumer Ace Sales Rep&quot;</errorConditionFormula>
        <errorMessage>The store owner can only be updated by an administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Canadian_Postal_Code_is_in_valid_format</fullName>
        <active>false</active>
        <description>Validates that the account Billing Zip/Postal Code is in the correct format if Billing Country is Canada</description>
        <errorConditionFormula>AND(
OR(BillingCountry = &quot;CAN&quot;, BillingCountry = &quot;CA&quot;, BillingCountry = &quot;Canada&quot;),
NOT(REGEX(BillingPostalCode, &quot;((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?&quot;))
)</errorConditionFormula>
        <errorMessage>Canadian postal code must be in A9A 9A9 format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>USA_zip_codes_is_in_valid_format</fullName>
        <active>false</active>
        <description>Validates that the account Billing Zip/Postal Code is in 99999 or 99999-9999 format if Billing Country is USA or US.</description>
        <errorConditionFormula>AND(
OR(BillingCountry = &quot;USA&quot;, BillingCountry = &quot;US&quot;),
NOT(REGEX(BillingPostalCode, &quot;\\d{5}(-\\d{4})?&quot;))
)</errorConditionFormula>
        <errorMessage>Zip code must be in 99999 or 99999-9999 format</errorMessage>
    </validationRules>
</CustomObject>